<resources>
    <string name="app_name">云课堂</string>
    <string name="other">备注</string>
    <string name="reason">原因</string>
    <string name="state">状态</string>
    <string name="duration">时长</string>
    <string name="time">时间</string>
    <string name="account">账号</string>
    <string name="student_no">学号</string>
    <string name="person_name">姓名</string>
    <string name="problem">问题</string>
    <string name="score">分数</string>
    <string name="comment">评语</string>
    <string name="session">节次</string>
    <string name="class_name">班级名称</string>
    <string name="class_code">班级代码</string>
    <string name="delete">删除</string>
    <string name="add_new">新增</string>
    <string name="modify">修改</string>
    <string name="choice">选择</string>
    <string name="click_to_select_time">点击选择时间</string>
    <string name="student">学生</string>
    <string name="classes">班级</string>
    <string name="perform_manage">出勤管理</string>
    <string name="teacher_no">工号</string>
    <string name="college">院校</string>
    <string name="department">系</string>
    <string name="profession">专业</string>
    <string name="to_modify_only_you_want">修改需要更新的信息即可</string>
    <string name="homework_manage">作业成绩管理</string>
    <string name="class_access_manage">课堂评价管理</string>
    <string name="student_normal_score_query">平时成绩查询</string>
    <string name="final_sum_score">综合总分</string>
    <string name="final_avg_score">综合平均分</string>
    <string name="homework_sum_score">作业总分</string>
    <string name="homework_avg_score">作业平均分</string>
    <string name="access_sum_score">课评总分</string>
    <string name="access_avg_score">课评平均分</string>
    <string name="final_max_score">综合最高分</string>
    <string name="final_min_score">综合最低分</string>
    <string name="homework_max_score">作业最高分</string>
    <string name="homework_min_score">作业最低分</string>
    <string name="access_max_score">课评最高分</string>
    <string name="access_min_score">课评最低分</string>
    <string name="score_result_by_teacher_accesses">分数根据教师评定统计得出</string>
    <string name="entry_year">入学年份</string>
    <string name="student_perform_page">出勤信息页</string>
    <string name="student_homework_page">作业成绩页</string>
    <string name="student_access_page">课堂评价页</string>
    <string name="click_upon_image_to_set_photo">点击上方图片设置头像</string>
    <string name="request_register">申请注册</string>
    <string name="to_login">去登录</string>
    <string name="teacher">教师</string>
    <string name="admin">管理员</string>
    <string name="type">类型</string>
    <string name="require_check_code">获取验证码</string>
    <string name="please_type_in_check_code">请输入验证码</string>
    <string name="please_input_repeat_pwd">请输入确认密码</string>
    <string name="repeat_pwd">确认密码</string>
    <string name="pls_type_in_pwd">请输入密码</string>
    <string name="pwd">密码</string>
    <string name="pls_type_in_tel_number">请输入手机号</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="secret">保密</string>
    <string name="brith">生日</string>
    <string name="address">地址</string>
    <string name="detail_address">详细地址</string>
    <string name="email">邮箱</string>
    <string name="brief_introduce">简介</string>
    <string name="we_will_auto_remind_your_last_login_infos_only_localhost">我们将会记住你的上次登录信息(仅本地)</string>
    <string name="login">登录</string>
    <string name="to_request_register">去注册</string>
    <string name="near_seven_day_auto_login">7天内自动登录</string>
    <string name="pls_type_in_account">请输入账号</string>
    <string name="click_here_to_jump">点击跳过</string>
    <string name="selected">已选</string>
    <string name="view_person_info">查看主页</string>
    <string name="student_no_or_teacher_no">工号、学号</string>
    <string name="is_useful">可用</string>
    <string name="add_or_modify">添加/修改</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failure_unkwon_reason">删除失败，未知原因</string>
    <string name="pls_retry_after_select_student">请选择学生后重试</string>
    <string name="pls_fill_time">请填写时间</string>
    <string name="pls_fill_problem">请填写问题</string>
    <string name="pls_fill_score">请填写分数</string>
    <string name="pls_fill_duration">请填写时长</string>
    <string name="pls_fill_state">请填写状态</string>
    <string name="pls_fill_session">请填写节次</string>
    <string name="current_not_select_any_item">"当前未选择任何项目"</string>
    <string name="add_record_success">添加记录成功</string>
    <string name="add_record_failure_unkown_reason">添加记录失败，未知原因</string>
    <string name="delete_record_success">删除记录成功</string>
    <string name="delete_record_failure_unkown_reason">删除记录失败，未知原因</string>
    <string name="info_updata_success">信息更新成功</string>
    <string name="info_update_failure_unkown_reason">信息更新失败，未知原因</string>
    <string name="pls_use_after_admin_gives_permission_and_fill_teacher_no">请填写工号管理员审核通过后使用</string>
    <string name="privacy_info_manage">私有信息管理</string>
    <string name="personal_info_manage">个人信息管理</string>
    <string name="pls_to_use_after_fill_student_no">请填写学号后使用</string>
    <string name="require_again_check_code_after_this_second">S后重新获取</string>
    <string name="register_info_has_submit_please_wait_admin_gives_permission_after_to_use">注册已经申请，非学生用户等待管理员审核之后方可使用所有功能</string>
    <string name="register_failure_had_regited_or_unkown_reason">注册失败，未知异常！,账户已经注册或出现未知异常</string>
    <string name="pls_fill_check_code">请输入验证码</string>
    <string name="cannot_submit_request_of_under_only_view_mode">您现在处于浏览模式，不能进行更改</string>
    <string name="pwd_and_repeat_pwd_was_not_equals_please_retry_after_modified">两次密码不一致，请重新输入后再次修改</string>
    <string name="unsupported_login_type">不支持的登录类型</string>
    <string name="login_failure_please_check_pwd_or_account">登录失败！请检查账号密码是否正确</string>
    <string name="jump_after_this_second">S后跳过</string>
    <string name="class_manage">班级管理</string>
    <string name="person_permission_manage">用户权限管理</string>
    <string name="pls_fill_class_code">请填写班级代码</string>
    <string name="pls_fill_class_name">请填写班级名称</string>
    <string name="delete_class_failure_for_it_exist_student">删除班级失败，该班级存在学生</string>
    <string name="new_class_was_added">新班级已添加</string>
    <string name="logout">登出</string>
</resources>
