<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pubActivities.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/page_padding"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/person_photo_height"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/cloudclassroomhor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/block_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewUserAccount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@integer/hor_weight_left"
                android:gravity="center_vertical"
                android:text="@string/account" />

            <EditText
                android:id="@+id/editTextUserAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/hor_weight_right"
                android:ems="10"
                android:hint="@string/pls_type_in_tel_number"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewUserPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@integer/hor_weight_left"
                android:gravity="center_vertical"
                android:text="@string/pwd" />

            <EditText
                android:id="@+id/editTextUserPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/hor_weight_right"
                android:hint="@string/pls_type_in_pwd"
                android:inputType="textPassword" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewRepeatUserPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@integer/hor_weight_left"
                android:gravity="center_vertical"
                android:text="@string/repeat_pwd" />

            <EditText
                android:id="@+id/editTextRepeatUserPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/hor_weight_right"
                android:hint="@string/please_input_repeat_pwd"
                android:inputType="textPassword" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Chronometer
                android:id="@+id/chronometerTimer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="visible"/>

            <EditText
                android:id="@+id/editTextCheckCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/please_type_in_check_code"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewRequireCheckCode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/clickable_text"
                android:text="@string/require_check_code"
                android:gravity="center"
                android:onClick="OnClickedRequireCheckCodeTextView"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLoginType"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@integer/hor_weight_left"
                android:text="@string/type" />

            <RadioGroup
                android:id="@+id/radioGroupLoginType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/hor_weight_right"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonStudent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/student" />

                <RadioButton
                    android:id="@+id/radioButtonTeacher"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/teacher" />

                <RadioButton
                    android:id="@+id/radioButtonAdmin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/admin" />
            </RadioGroup>

        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/textViewToLogin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:gravity="center_vertical|right"
                android:onClick="OnClickedToLoginTextView"
                android:text="@string/to_login"
                android:textColor="@color/clickable_text"
                android:textStyle="italic|bold" />
        </FrameLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/block_margin"
            android:background="@color/submit_color"
            android:onClick="OnClickedRegisterButton"
            android:text="@string/request_register" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center_horizontal"
            android:text="@string/click_upon_image_to_set_photo" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>