<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pubActivities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/page_padding"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/login_logo_height"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/cloudclassroomhor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/block_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewUserAccount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@integer/hor_weight_left"
                android:gravity="center_vertical"
                android:text="@string/account" />

            <EditText
                android:id="@+id/editTextUserAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/hor_weight_right"
                android:hint="@string/pls_type_in_account"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewUserPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@integer/hor_weight_left"
                android:gravity="center_vertical"
                android:text="@string/pwd" />

            <EditText
                android:id="@+id/editTextUserPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/hor_weight_right"
                android:hint="@string/pls_type_in_pwd"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLoginType"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="@integer/hor_weight_left"
                android:text="@string/type" />

            <RadioGroup
                android:id="@+id/radioGroupLoginType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/hor_weight_right"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonStudent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/student" />

                <RadioButton
                    android:id="@+id/radioButtonTeacher"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/teacher" />

                <RadioButton
                    android:id="@+id/radioButtonAdmin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/admin" />
            </RadioGroup>

        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <CheckBox
                android:id="@+id/checkBoxAutoLogin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/near_seven_day_auto_login"
                android:textColor="@color/clickable_text" />

            <TextView
                android:id="@+id/textViewToLogin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:gravity="center_vertical|right"
                android:text="@string/to_request_register"
                android:textColor="@color/clickable_text"
                android:textStyle="italic|bold"
                android:onClick="OnClickedToRegisterTextView"/>
        </FrameLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="@dimen/block_margin"
            android:layout_gravity="center_horizontal"
            android:background="@color/submit_color"
            android:onClick="OnClickedLoginButton"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:text="@string/we_will_auto_remind_your_last_login_infos_only_localhost" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>